jena-shex/src/test/files/spec/negativeSyntax/emptylanguageStem-Minus-emptylanguageStem.shex
<http://a.example/S1> [@~ - @~]
